- change expander icon for quick page buttons hiding
- simplify tab info dialog to remove unused left/right stuff
- add RIAA frequency deemphasis code
- change 'show miniplots' action to mean hide/show during sweeps
- alter defaults to use auto-attenuation and enable generators
- add riaa compensation files
- add biquad explanation to AudioMath.pdf
- some improvements to the online help
v 1.2.1
- add Save Configuration as Default command to menu
- add Settings page accelerator
- fix startup internal harmonic issue
- allow option to refresh noise floor value periodically
- add Dn columns to new THD vs Freq
- remove old THD vs Freq and use new Opamp version
- fix COM exceptions in menu mode
- add Quick Page buttons
- totally change noise detection in THD vs Freq for startup issues
- repair initial value for Input Range to force relay delay
- switch to Menus as default setting
- add checkbox switch to plot legends for line display
- build ComboDrop control for brevity and future
- change gain test initializations and fft size/rate
- repair fittodata off-by-one
v 1.2.00
- add option to replace the tabbed gui with menus
- improve app esthetics by changing plot boundaries
- retain current page selection in configuration
v 1.1.47
- change the smoothing algorithm to center it
- add a smoothing option to the frequency response chirp tests
- truncate chirped high frequency noisy part
- add expanders to cursor section
- fix measured impedance phase math
v 1.1.46
- serious refactor of the graph Y-axis format support
- addition of dBr options to the Y-axis format choices
- remove distortion component from SNR math
- hide response options that aren't relevant to the test type
- improve FitToData in all tests
-   better recognition of plot Yaxis formats
-   don't fit unviewed plot lines in sweeps
-   fully support dBr in most tests
- partial implementation of dBr for discrete sweeps
v 1.1.45
- support multiple file select for GET operation